force-app/main/default/objects/WorldCountries__c/WorldCountries__c.object-meta.xml
<CustomObject>
    <label>World Countries</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>World Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>