force-app/main/default/objects/WorldCountries__c/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <externalId>true</externalId>
    <label>Item Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>