force-app/main/default/objects/WorldCountries__c/fields/ItemLevel__c.field-meta.xml
<CustomField>
    <fullName>ItemLevel__c</fullName>
    <label>Item Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>