force-app/main/default/objects/WorldCountries__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>WorldCountries__c</referenceTo>
    <relationshipLabel>World Countries</relationshipLabel>
    <relationshipName>World_Countries</relationshipName>
    <type>Lookup</type>
</CustomField>