force-app/main/default/objects/WorldCountries__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Parent Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>